tests/macros/duplicate/editor.stderr
error: duplicate option `editor`
 --> tests/macros/duplicate/editor.rs:4:9
  |
4 |         editor: todo!(),
  |         ^^^^^^
