tests/macros/duplicate/editor.rs
fn main() {
    let q = requestty::questions![Editor {
        editor: todo!(),
        editor: todo!(),
    }];
}
